objects/Apttus__IDEMapClauseProvision__c.object
<CustomObject>
    <description>Holds the mapping between IDE provision record type and the agreement clause</description>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The mapping description</description>
        <inlineHelpText>The mapping description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEMapProvisionRecordTypeId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ID of the IDE provision record type</description>
        <inlineHelpText>ID of the IDE provision record type</inlineHelpText>
        <label>IDE Provision Record Type</label>
        <referenceTo>Apttus__IDEMapProvisionRecordType__c</referenceTo>
        <relationshipLabel>IDE Map Clause Provisions</relationshipLabel>
        <relationshipName>IDEMapClauseProvisions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateReferenceId__c</fullName>
        <description>The template reference ID</description>
        <externalId>true</externalId>
        <inlineHelpText>The template reference ID</inlineHelpText>
        <label>Template Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IDE Map Clause Provision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Map Clause Provisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>